# wasm-glue

./: Cargo.toml  README.md
example/: .gitignore  Cargo.toml  example.rs  example.wasm  index.html  js-embed.js  main.js  rs-embed.js
src/: lib.rs
